@@ -1,1 +1,0 @@
-Library for OAuth version 1.0a.
