@@ -1,14 +1,0 @@
-# $NetBSD: Makefile,v 1.6 2017/09/04 18:08:27 wiz Exp $
-
-DISTNAME=	oauth-1.0.1
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-CATEGORIES=	python security www
-MASTER_SITES=	${MASTER_SITE_PYPI:=o/oauth/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://pypi.python.org/pypi/oauth/
-COMMENT=	Python OAuth library
-LICENSE=	mit
-
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
