@@ -1,17 +1,0 @@
-This code was originally forked from Leah Culver and Andy Smith's
-oauth.py code. Some of the tests come from a fork by Vic Fryzel, while
-a revamped Request class and more tests were merged in from Mark
-Paschal's fork. A number of notable differences exist between this
-code and its forefathers:
-
-  100% unit test coverage.
-  The DataStore object has been completely ripped out. While
-    creating unit tests for the library I found several substantial
-    bugs with the implementation and confirmed with Andy Smith that it
-    was never fully baked.
-  Classes are no longer prefixed with OAuth.
-  The Request class now extends from dict.
-  The library is likely no longer compatible with Python 2.3.
-  The Client class works and extends from httplib2. It's a thin
-    wrapper that handles automatically signing any normal HTTP request
-    you might wish to make.
