@@ -1,28 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2013/05/12 19:55:42 cheusov Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/${EGG_INFODIR}/zip-safe
-${PYSITELIB}/oauth2/__init__.py
-${PYSITELIB}/oauth2/__init__.pyc
-${PYSITELIB}/oauth2/__init__.pyo
-${PYSITELIB}/oauth2/_version.py
-${PYSITELIB}/oauth2/_version.pyc
-${PYSITELIB}/oauth2/_version.pyo
-${PYSITELIB}/oauth2/clients/__init__.py
-${PYSITELIB}/oauth2/clients/__init__.pyc
-${PYSITELIB}/oauth2/clients/__init__.pyo
-${PYSITELIB}/oauth2/clients/imap.py
-${PYSITELIB}/oauth2/clients/imap.pyc
-${PYSITELIB}/oauth2/clients/imap.pyo
-${PYSITELIB}/oauth2/clients/smtp.py
-${PYSITELIB}/oauth2/clients/smtp.pyc
-${PYSITELIB}/oauth2/clients/smtp.pyo
-${PYSITELIB}/tests/__init__.py
-${PYSITELIB}/tests/__init__.pyc
-${PYSITELIB}/tests/__init__.pyo
-${PYSITELIB}/tests/test_oauth.py
-${PYSITELIB}/tests/test_oauth.pyc
-${PYSITELIB}/tests/test_oauth.pyo
