@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.2 2015/11/04 01:18:04 agc Exp $
-
-SHA1 (oauth2-1.5.211.tar.gz) = ac66def0ec16e4d2654e75f2bcae837e6dcf309f
-RMD160 (oauth2-1.5.211.tar.gz) = 70baee500d03210cf30125be0cb3281185c70626
-SHA512 (oauth2-1.5.211.tar.gz) = 3f5606702d4e305c191c924cab01ee3fc7e170a26460c1d49031e3d9a296b3502d5e18edb1ec0e291abd61797cb47b7b2b8929eff33eb8bc9fd73434b3ab028a
-Size (oauth2-1.5.211.tar.gz) = 18608 bytes
