@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2018,v 1.3931 2018/09/05 08:56:36 adam Exp $
+$NetBSD: CHANGES-2018,v 1.3932 2018/09/05 09:22:42 adam Exp $
 
 Changes to the packages collection and infrastructure in 2018:
 
@@ -5534,3 +5534,5 @@ Changes to the packages collection and infrastructure in 2018:
 	Added www/py-cherrypy17 version 17.3.0 [adam 2018-09-05]
 	Updated www/py-flup to 1.0.3 [adam 2018-09-05]
 	Removed www/py-flup3 successor www/py-flup [adam 2018-09-05]
+	Removed security/py-oauth [adam 2018-09-05]
+	Removed security/py-oauth2 [adam 2018-09-05]
